# microbin

./: Cargo.toml  README.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  autolint.yml  minor-auto.yml  minor-merge.yml  release.yml  rust-clippy.yml  rust.yml  semver.yml  vitamins.yml
src/: main.rs
src/endpoints/: create.rs  edit.rs  remove.rs
src/util/: db.rs  db_json.rs  db_sqlite.rs
templates/: list.html  upload.html
