[package]
name = "microbin"
version = "2.0.4"
edition = "2021"
authors = ["Daniel Szabo <daniel@microbin.eu>"]
license = "BSD-3-Clause"
description = "Simple, performant, configurable, entirely self-contained Pastebin and URL shortener."
readme = "README.md"
homepage = "https://microbin.eu"
repository = "https://github.com/szabodanika/microbin"
keywords = ["pastebin", "filesharing", "microbin", "actix", "selfhosted"]
categories = ["pastebins"]

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
bytesize = { version = "1.3", features = ["serde"] }
askama = "0.10"
askama-filters = { version = "0.1.3", features = ["chrono"] }
chrono = "0.4.38"
rand = "0.8.5"
linkify = "0.10.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
actix-multipart = "0.4.0"
futures = "0.3"
sanitize-filename = "0.5.0"
log = "0.4"
env_logger = "0.11.5"
actix-web-httpauth = "0.6.0"
lazy_static = "1.5.0"
syntect = "5.2"
qrcode-generator = "4.1.9"
rust-embed = "8.5.0"
mime_guess = "2.0.5"
harsh = "0.2"
html-escape = "0.2.13"
magic-crypt = "4.0.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dependencies.openssl]
version = "0.10.68"
features = ["vendored"]

[profile.release]
lto = true
strip = true
